--- a/examples/cube2.html
+++ b/examples/cube2.html
@@ -16,20 +16,23 @@
 
 <body>
   <vr-assets>
-    <vr-geometry id="cube" primitive="Box" width="200" height="200" depth="200"></vr-geometry>
+    <vr-geometry id="cube" primitive="Box" width="200" height="200" depth="200" href="space.html"></vr-geometry>
     <vr-geometry id="sphere" primitive="Sphere" radius="100"></vr-geometry>
     <vr-material id="normal" type="MeshNormalMaterial"></vr-material>
     <vr-material id="basic" type="MeshBasicMaterial"></vr-material>
   </vr-assets>
   <vr-scene>
-    <vr-mesh class="cube" rotx="45" roty="45" geometry="cube" material="normal" z="-500"></vr-mesh>
+    <vr-camera fov="45" near="1" far="2000" y="50">
+      <vr-cursor z="-50" radius="0.5"></vr-cursor>
+    </vr-camera>
+    <vr-mesh id="mesh" class="cube" rotx="45" roty="45" geometry="cube" material="normal" z="-500" href="space.html"></vr-mesh>
   </vr-scene>
-  <button class="vr-button">Enter VR</button>
   <script>
-    var scene = document.querySelector('vr-scene');
-    var fsButton = document.querySelector('.vr-button');
-    fsButton.addEventListener('click', function() {
-      scene.enterVR();
+    document.getElementById('mesh').addEventListener('click', function (e) {
+      var href = e.target.getAttribute('href');
+      if (href) {
+        window.top.postMessage({type: 'navigate', data: {url: href}}, '*');
+      }
     });
   </script>
 </body>
