--- a/examples/cube.html
+++ b/examples/cube.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Cube</title>
-  <meta name="description" content="Space">
+  <meta name="description" content="Cube">
   <link rel="stylesheet" type="text/css" href="style/main.css" />
   <link rel="stylesheet" type="text/css" href="../dist/vr-markup.css" />
   <script src="../dist/vr-markup-min.js"></script>
@@ -15,15 +15,17 @@
 
 <body>
   <vr-scene>
-    <vr-camera y="1.8" z="20"></vr-camera>
-    <vr-cube id="cube" width="5" height="5" depth="5" rotx="45" roty="45" y="2"></vr-cube>
+    <vr-camera y="1.8" z="20">
+      <vr-cursor z="-50" radius="0.5"></vr-cursor>
+    </vr-camera>
+    <vr-cube id="cube" width="5" height="5" depth="5" rotx="45" roty="45" y="2" href="interactions.html"></vr-cube>
   </vr-scene>
-  <button class="vr-button">Enter VR</button>
   <script>
-    var scene = document.querySelector('vr-scene');
-    var fsButton = document.querySelector('.vr-button');
-    fsButton.addEventListener('click', function() {
-      scene.enterVR();
+    document.querySelector('#cube').addEventListener('click', function (e) {
+      var href = e.target.getAttribute('href');
+      if (href) {
+        window.top.postMessage({type: 'navigate', data: {url: href}}, '*');
+      }
     });
   </script>
 </body>
