--- a/examples/physics.html
+++ b/examples/physics.html
@@ -16,8 +16,9 @@
 <body>
   <vr-scene>
     <vr-physics></vr-physics>
-    <vr-controls></vr-controls>
-    <vr-camera position="0 1.8 40"></vr-camera>
+    <vr-controls position="0 1.8 40">
+      <vr-camera></vr-camera>
+    </vr-controls>
     <vr-cube id="cube" position="-5 12 0" rotation="0 45 0" width="5" height="5" depth="5"></vr-cube>
     <vr-cube id="cube" position="5 12 0" rotation="0 45 0" width="5" height="5" depth="5"></vr-cube>
     <vr-cube id="cube" position="0 5 0" rotation="0 45 0" width="5" height="5" depth="5"></vr-cube>
