move CannonDebugRenderer.js to examples/js/lib/vendor/

--- a/examples/physics.html
+++ b/examples/physics.html
@@ -10,7 +10,7 @@
   <!-- User-defined component example -->
   <script src="../components/vr-cube.js"></script>
   <script src="../components/vr-grid.js"></script>
-  <script src="js/CannonDebugRenderer.js"></script>
+  <script src="js/lib/vendor/CannonDebugRenderer.js"></script>
 </head>
 
 <body>
