--- a/examples/effectors.html
+++ b/examples/effectors.html
@@ -11,6 +11,7 @@
   <script src="../components/effectors/vr-camera.js"></script>
   <script src="../components/effectors/vr-render.js"></script>
   <script src="../components/effectors/vr-mesh.js"></script>
+  <script src="../components/effectors/vr-rotate.js"></script>
 </head>
 
 <body>
@@ -21,12 +22,14 @@
     <vr-mesh id="cubeMesh1"></vr-mesh>
     <vr-mesh id="cubeMesh2"></vr-mesh>
     <vr-mesh id="cubeMesh3"></vr-mesh>
+    <vr-rotate id="rotateY" axis="y"></vr-rotate>
+    <vr-rotate id="rotateX" axis="x"></vr-rotate>
   </vr-effectors>
   <vr-scene>
     <vr-object id="myCamera1" effectors="camera1"></vr-object>
     <vr-object id="myCamera2" effectors="camera2, render" position="0 0 25"></vr-object>
     <vr-object effectors="cubeMesh1" position="0 0 0" rotation="0 0 0"></vr-object>
-    <vr-object position="0 2 0" rotation="0 0 0">
+    <vr-object effectors="rotateX rotateY" position="0 2 0" rotation="0 0 0">
       <vr-object effectors="cubeMesh2" position="7 0 0" rotation="0 0 0"></vr-object>
       <vr-object effectors="cubeMesh3" position="-7 0 0" rotation="0 0 0"></vr-object>
     </vr-object>
