Handle VRObject effector attribute changes

--- a/examples/effectors.html
+++ b/examples/effectors.html
@@ -24,6 +24,7 @@
     <vr-mesh id="cubeMesh3"></vr-mesh>
     <vr-rotate id="rotateY" axis="y"></vr-rotate>
     <vr-rotate id="rotateX" axis="x"></vr-rotate>
+    <vr-rotate id="rotateZ" axis="z"></vr-rotate>
   </vr-effectors>
   <vr-scene>
     <vr-object id="myCamera1" effectors="camera1"></vr-object>
