Handle effector detach from VRObject

--- a/examples/effectors.html
+++ b/examples/effectors.html
@@ -27,10 +27,10 @@
     <vr-rotate id="rotateZ" axis="z"></vr-rotate>
   </vr-effectors>
   <vr-scene>
-    <vr-object id="myCamera1" effectors="camera1"></vr-object>
+    <vr-object id="myCamera1" effectors="camera1" position="25 20 25" rotation="-25 45 0"></vr-object>
     <vr-object id="myCamera2" effectors="camera2, render" position="0 0 25"></vr-object>
-    <vr-object effectors="cubeMesh1" position="0 0 0" rotation="0 0 0"></vr-object>
-    <vr-object effectors="rotateX rotateY" position="0 2 0" rotation="0 0 0">
+    <vr-object effectors="cubeMesh1 " position="0 0 0" rotation="0 0 0"></vr-object>
+    <vr-object effectors="" position="0 2 0" rotation="0 0 0">
       <vr-object effectors="cubeMesh2" position="7 0 0" rotation="0 0 0"></vr-object>
       <vr-object effectors="cubeMesh3" position="-7 0 0" rotation="0 0 0"></vr-object>
     </vr-object>
