--- a/examples/effectors.html
+++ b/examples/effectors.html
@@ -12,6 +12,7 @@
   <script src="../components/effectors/vr-render.js"></script>
   <script src="../components/effectors/vr-mesh.js"></script>
   <script src="../components/effectors/vr-rotate.js"></script>
+  <script src="../components/effectors/vr-controls.js"></script>
 </head>
 
 <body>
@@ -25,11 +26,12 @@
     <vr-rotate id="rotateY" axis="y"></vr-rotate>
     <vr-rotate id="rotateX" axis="x"></vr-rotate>
     <vr-rotate id="rotateZ" axis="z"></vr-rotate>
+    <vr-controls id="controls"></vr-controls>
   </vr-effectors>
   <vr-scene>
     <vr-object id="myCamera1" effectors="camera1" position="25 20 25" rotation="-25 45 0"></vr-object>
-    <vr-object id="myCamera2" effectors="camera2, render" position="0 0 25"></vr-object>
-    <vr-object effectors="cubeMesh1 " position="0 0 0" rotation="0 0 0"></vr-object>
+    <vr-object id="myCamera2" effectors="camera2, render, controls" position="0 0 25"></vr-object>
+    <vr-object effectors="cubeMesh1" position="0 0 0" rotation="0 0 0"></vr-object>
     <vr-object effectors="" position="0 2 0" rotation="0 0 0">
       <vr-object effectors="cubeMesh2" position="7 0 0" rotation="0 0 0"></vr-object>
       <vr-object effectors="cubeMesh3" position="-7 0 0" rotation="0 0 0"></vr-object>
