--- a/examples/effectors.html
+++ b/examples/effectors.html
@@ -45,9 +45,9 @@
     <vr-object id="myCamera1" effectors="camera1" position="25 20 25" rotation="-25 45 0"></vr-object>
     <vr-object id="myCamera2" effectors="camera2, render, controls" position="0 0 25"></vr-object>
     
-    <vr-object effectors="sphereMesh" position="0 0 0" rotation="0 0 0"></vr-object>
+    <vr-object effectors="cubeMesh1" position="0 0 0" rotation="0 0 0"></vr-object>
 
-    <vr-object effectors="" position="0 2 0" rotation="0 0 0">
+    <vr-object id="myGroup" effectors="" position="0 2 0" rotation="0 0 0">
       <vr-object effectors="cubeMesh2" position="-7 0 0" rotation="0 0 0"></vr-object>
       <vr-object effectors="cubeMesh3" position="7 0 0" rotation="0 0 0"></vr-object>
     </vr-object>
