--- a/examples/effectors.html
+++ b/examples/effectors.html
@@ -26,8 +26,7 @@
 
   <vr-effectors>
     <vr-render id="render"></vr-render>
-    <vr-camera id="camera1"></vr-camera>
-    <vr-camera id="camera2"></vr-camera>
+    <vr-camera id="camera"></vr-camera>
     
     <vr-mesh id="cubeMesh1" geometry="cube"></vr-mesh>
     <vr-mesh id="cubeMesh2"></vr-mesh>
@@ -42,12 +41,11 @@
   </vr-effectors>
 
   <vr-scene>
-    <vr-object id="myCamera1" effectors="camera1" position="25 20 25" rotation="-25 45 0"></vr-object>
-    <vr-object id="myCamera2" effectors="camera2, render, controls" position="0 0 25"></vr-object>
+    <vr-object id="myCamera1" effectors="camera, render, controls" position="0 0 20"></vr-object>
     
     <vr-object effectors="cubeMesh1" position="0 0 0" rotation="0 0 0"></vr-object>
 
-    <vr-object id="myGroup" effectors="" position="0 2 0" rotation="0 0 0">
+    <vr-object id="myGroup" effectors="rotateY" position="0 2 0" rotation="0 0 0">
       <vr-object effectors="cubeMesh2" position="-7 0 0" rotation="0 0 0"></vr-object>
       <vr-object effectors="cubeMesh3" position="7 0 0" rotation="0 0 0"></vr-object>
     </vr-object>
