--- a/examples/index.html
+++ b/examples/index.html
@@ -41,6 +41,7 @@
     <h1>vr-markup examples</h1>
     <ul>
       <li><a href="controls/">controls</a></li>
+      <li><a href="light/">light</a></li>
     </ul>
   </body>
 </html>
