Add grid geometry and lineBasic material

--- a/examples/cubes.html
+++ b/examples/cubes.html
@@ -15,6 +15,7 @@
     <vr-object position="-10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: red"></vr-object>
     <vr-object position="0 0 0" rotation="0 45 0" geometry="primitive: box" material="color: green"></vr-object>
     <vr-object class="cube" position="10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: blue"></vr-object>
+    <vr-object position="0 -2.5 0" rotation="0 0 0" geometry="primitive: grid" material="color: grey"></vr-object>
   </vr-scene>
 </body>
 </html>
