--- a/examples/cubes.html
+++ b/examples/cubes.html
@@ -11,7 +11,7 @@
 
 <body>
   <vr-scene>
-    <vr-object position="0 0 20" camera="fov: 45" keyboardControls></vr-object>
+    <vr-object position="0 0 20" camera="fov: 45" keyboardControls  mouseControls></vr-object>
     <vr-object position="-10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: red"></vr-object>
     <vr-object position="0 0 0" rotation="0 45 0" geometry="primitive: box" material="color: green"></vr-object>
     <vr-object class="cube" position="10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: blue"></vr-object>
