--- a/examples/controls/index.html
+++ b/examples/controls/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Controls</title>
-    <meta name="description" content="Controls — vr-markup">
-    <link rel="stylesheet" type="text/css" href="../../style/vr-markup.css">
+    <meta name="description" content="Controls — aframe-core">
+    <link rel="stylesheet" type="text/css" href="../../style/aframe-core.css">
     <link rel="stylesheet" type="text/css" href="../_style/main.css">
-    <script src="../../build/vr-markup.js"></script>
+    <script src="../../build/aframe-core.js"></script>
   </head>
   <body>
-    <vr-scene>
-      <vr-controls position="0 1.8 20">
-        <vr-camera></vr-camera>
-      </vr-controls>
-    </vr-scene>
+    <a-scene>
+      <a-controls position="0 1.8 20">
+        <a-camera></a-camera>
+      </a-controls>
+    </a-scene>
   </body>
 </html>
