--- a/examples/texture/index.html
+++ b/examples/texture/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Texture</title>
-    <meta name="description" content="Texture — vr-markup">
-    <link rel="stylesheet" type="text/css" href="../../style/vr-markup.css">
+    <meta name="description" content="Texture — aframe-core">
+    <link rel="stylesheet" type="text/css" href="../../style/aframe-core.css">
     <link rel="stylesheet" type="text/css" href="../_style/main.css">
-    <script src="../../build/vr-markup.js"></script>
+    <script src="../../build/aframe-core.js"></script>
   </head>
   <body>
-    <vr-assets>
-      <vr-mixin id="hotspot"
+    <a-assets>
+      <a-mixin id="hotspot"
         material="color: blue"
         geometry="primitive: ring; outerRadius: 0.2; innerRadius: 0.19"
-      ></vr-mixin>
-      <vr-mixin id="pano" 
-        geometry="primitive: sphere; width: 10; height: 10;" 
+      ></a-mixin>
+      <a-mixin id="pano"
+        geometry="primitive: sphere; width: 10; height: 10;"
         material="url: ../_images/pano/louvre.jpg;"
-      ></vr-mixin>
-    </vr-assets>
-    <vr-scene>
-      <vr-object camera="fov: 45" controls="mouselook: true; locomotion: false"></vr-object>
-      <vr-object mixin="pano"></vr-object>
-      <vr-object mixin="hotspot" position="0 0 -2"></vr-object>
-    </vr-scene>
+      ></a-mixin>
+    </a-assets>
+    <a-scene>
+      <a-object camera="fov: 45" controls="mouselook: true; locomotion: false"></a-object>
+      <a-object mixin="pano"></a-object>
+      <a-object mixin="hotspot" position="0 0 -2"></a-object>
+    </a-scene>
   </body>
 </html>
