--- a/examples/cubes/index.html
+++ b/examples/cubes/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Cubes</title>
-    <meta name="description" content="Cubes — vr-markup">
-    <link rel="stylesheet" type="text/css" href="../../style/vr-markup.css">
+    <meta name="description" content="Cubes — aframe-core">
+    <link rel="stylesheet" type="text/css" href="../../style/aframe-core.css">
     <link rel="stylesheet" type="text/css" href="../_style/main.css">
-    <script src="../../build/vr-markup.js"></script>
+    <script src="../../build/aframe-core.js"></script>
   </head>
   <body>
-    <vr-scene>
-      <vr-object position="0 0 20" camera="fov: 45" controls="mouselook: true; locomotion: true"></vr-object>
-      <vr-object position="-10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: red"></vr-object>
-      <vr-object position="0 0 0" rotation="0 45 0" geometry="primitive: box" material="color: green"></vr-object>
-      <vr-object class="cube" position="10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: blue"></vr-object>
-    </vr-scene>
+    <a-scene>
+      <a-object position="0 0 20" camera="fov: 45" controls="mouselook: true; locomotion: true"></a-object>
+      <a-object position="-10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: red"></a-object>
+      <a-object position="0 0 0" rotation="0 45 0" geometry="primitive: box" material="color: green"></a-object>
+      <a-object class="cube" position="10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: blue"></a-object>
+    </a-scene>
   </body>
 </html>
