--- a/examples/cursor/index.html
+++ b/examples/cursor/index.html
@@ -3,50 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>Cursor</title>
-    <meta name="description" content="Cursor — vr-markup">
-    <link rel="stylesheet" type="text/css" href="../../style/vr-markup.css">
+    <meta name="description" content="Cursor — aframe-core">
+    <link rel="stylesheet" type="text/css" href="../../style/aframe-core.css">
     <link rel="stylesheet" type="text/css" href="../_style/main.css">
-    <script src="../../build/vr-markup.js"></script>
+    <script src="../../build/aframe-core.js"></script>
   </head>
   <body>
-    <vr-assets>
-      <vr-mixin id="cube" geometry="primitive: box"></vr-mixin>
-      <vr-mixin id="cube-hovered" material="color: pink"></vr-mixin>
-      <vr-mixin id="red" material="color: red"></vr-mixin>
-      <vr-mixin id="green" material="color: green"></vr-mixin>
-      <vr-mixin id="blue" material="color: blue"></vr-mixin>
-      <vr-mixin id="sphere" geometry="primitive: sphere"></vr-mixin>
-    </vr-assets>
+    <a-assets>
+      <a-mixin id="cube" geometry="primitive: box"></a-mixin>
+      <a-mixin id="cube-hovered" material="color: pink"></a-mixin>
+      <a-mixin id="red" material="color: red"></a-mixin>
+      <a-mixin id="green" material="color: green"></a-mixin>
+      <a-mixin id="blue" material="color: blue"></a-mixin>
+      <a-mixin id="sphere" geometry="primitive: sphere"></a-mixin>
+    </a-assets>
 
-    <vr-scene>
-      <vr-object position="-3 0 20" camera="fov: 45" controls="mouselook: true; locomotion: true">
-        <vr-object position="0 0 -5" geometry="primitive: ring; outerRadius: 0.12; innerRadius: 0.08;" material="color: red" raycaster=""></vr-object>
-      </vr-object>
+    <a-scene>
+      <a-object position="-3 0 20" camera="fov: 45" controls="mouselook: true; locomotion: true">
+        <a-object position="0 0 -5" geometry="primitive: ring; outerRadius: 0.12; innerRadius: 0.08;" material="color: red" raycaster=""></a-object>
+      </a-object>
 
-      <vr-object position="-10 0 0" rotation="0 0 0">
-        <vr-object mixin="cube red">
-          <vr-animation begin="click" attribute="position" from="0 0 0" to="0 0 -10" dur="2000" fill="both"></vr-animation>
-        </vr-object>
-      </vr-object>
+      <a-object position="-10 0 0" rotation="0 0 0">
+        <a-object mixin="cube red">
+          <a-animation begin="click" attribute="position" from="0 0 0" to="0 0 -10" dur="2000" fill="both"></a-animation>
+        </a-object>
+      </a-object>
 
-      <vr-object position="0 0 0" rotation="0 0 0">
-        <vr-object mixin="cube green">
-          <vr-animation begin="click" attribute="rotation" to="0 360 0" easing="linear" dur="2000"></vr-animation>
-        </vr-object>
-      </vr-object>
+      <a-object position="0 0 0" rotation="0 0 0">
+        <a-object mixin="cube green">
+          <a-animation begin="click" attribute="rotation" to="0 360 0" easing="linear" dur="2000"></a-animation>
+        </a-object>
+      </a-object>
 
-      <vr-object position="10 0 0" rotation="0 45 0">
-        <vr-object mixin="cube blue">
-          <vr-animation fill="forward" repeat="1" direction="alternate" begin="click" attribute="position" from="0 0 0" to="15 0 0" dur="2000"></vr-animation>
-        </vr-object>
-      </vr-object>
-    </vr-scene>
+      <a-object position="10 0 0" rotation="0 45 0">
+        <a-object mixin="cube blue">
+          <a-animation fill="forward" repeat="1" direction="alternate" begin="click" attribute="position" from="0 0 0" to="15 0 0" dur="2000"></a-animation>
+        </a-object>
+      </a-object>
+    </a-scene>
 
     <script>
       (function () {
         // If you want to respond to mouse events, this is how. Otherwise,
         // if you just want a working cursor, you don't need any of this.
-        var cubes = document.querySelectorAll('vr-object[mixin=cube]');
+        var cubes = document.querySelectorAll('a-object[mixin=cube]');
         var i;
         for (i = 0; i < cubes.length; ++i) {
           cubes[i].addEventListener('click', function () {
