--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-    <title>vr-markup examples</title>
+    <title>aframe-core examples</title>
     <style>
       * {
         margin: 0;
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <h1>vr-markup examples</h1>
+    <h1>aframe-core examples</h1>
     <ul>
       <li><a href="animation/">Animation</a></li>
       <li><a href="controls/">Controls</a></li>
