--- a/examples/lights/index.html
+++ b/examples/lights/index.html
@@ -4,35 +4,35 @@
   <meta charset="utf-8">
   <title>Light Component</title>
   <meta name="description" content="Light Component">
-  <link rel="stylesheet" type="text/css" href="../../style/vr-markup.css">
+  <link rel="stylesheet" type="text/css" href="../../style/aframe-core.css">
   <link rel="stylesheet" type="text/css" href="../_style/main.css">
-  <script src="../../build/vr-markup.js"></script>
+  <script src="../../build/aframe-core.js"></script>
 </head>
 
 <body>
-  <vr-assets>
-    <vr-mixin id="orbit" attribute="rotation" to="1 0.2 0.2"
-              repeat="indefinite" easing="linear" dur="10000"></vr-mixin>
-  </vr-assets>
-  <vr-scene>
+  <a-assets>
+    <a-mixin id="orbit" attribute="rotation" to="1 0.2 0.2"
+              repeat="indefinite" easing="linear" dur="10000"></a-mixin>
+  </a-assets>
+  <a-scene>
     <!-- Camera. -->
-    <vr-object position="0 0 20" camera="fov: 45"
-               controls="mouselook: true; locomotion: true"></vr-object>
+    <a-object position="0 0 20" camera="fov: 45"
+               controls="mouselook: true; locomotion: true"></a-object>
 
-    <vr-object light="color: #CCCCFF; intensity: 15"
+    <a-object light="color: #CCCCFF; intensity: 15"
                position="-10 10 10" rotation="-0.2 0.2 0.2">
-      <vr-animation mixin="orbit"></vr-animation>
-    </vr-object>
+      <a-animation mixin="orbit"></a-animation>
+    </a-object>
 
     <!-- Lit objects. -->
-    <vr-object position="-10 0 0" geometry="primitive: sphere; radius: 3"
-               material="color: red; metallic: 1"></vr-object>
-    <vr-object position="-20 0 0" geometry="primitive: sphere; radius: 3"
-               material="color: purple; roughness: 1"></vr-object>
-    <vr-object position="0 0 0" rotation="0 45 0" geometry="primitive: box"
-               material="color: green; metallic: .8"></vr-object>
-    <vr-object position="10 0 0" rotation="0 0 45" geometry="primitive: box"
-               material="color: blue; roughness: 1; metallic: 0"></vr-object>
-  </vr-scene>
+    <a-object position="-10 0 0" geometry="primitive: sphere; radius: 3"
+               material="color: red; metallic: 1"></a-object>
+    <a-object position="-20 0 0" geometry="primitive: sphere; radius: 3"
+               material="color: purple; roughness: 1"></a-object>
+    <a-object position="0 0 0" rotation="0 45 0" geometry="primitive: box"
+               material="color: green; metallic: .8"></a-object>
+    <a-object position="10 0 0" rotation="0 0 45" geometry="primitive: box"
+               material="color: blue; roughness: 1; metallic: 0"></a-object>
+  </a-scene>
 </body>
 </html>
