--- a/examples/mixin/index.html
+++ b/examples/mixin/index.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
     <title>Style mixins</title>
     <meta name="description" content="Style mixins">
-    <link rel="stylesheet" type="text/css" href="../../style/vr-markup.css">
+    <link rel="stylesheet" type="text/css" href="../../style/aframe-core.css">
     <link rel="stylesheet" type="text/css" href="../_style/main.css">
-    <script src="../../build/vr-markup.js"></script>
+    <script src="../../build/aframe-core.js"></script>
   </head>
   <body>
-    <vr-assets>
-      <vr-mixin id="cube" geometry="primitive: box" material="color: red"></vr-mixin>
-      <vr-mixin id="sphere" geometry="primitive: sphere" material="color: blue"></vr-mixin>
-    </vr-assets>
-    <vr-scene>
-      <vr-object position="0 0 20" camera="fov: 45" controls="mouselook: true; locomotion: true"></vr-object>
+    <a-assets>
+      <a-mixin id="cube" geometry="primitive: box" material="color: red"></a-mixin>
+      <a-mixin id="sphere" geometry="primitive: sphere" material="color: blue"></a-mixin>
+    </a-assets>
+    <a-scene>
+      <a-object position="0 0 20" camera="fov: 45" controls="mouselook: true; locomotion: true"></a-object>
       <!-- specialization of a particular component with an applied mixin -->
-      <vr-object mixin="cube" position="-10 0 0" rotation="0 45 0" material="color: yellow"></vr-object>
-      <vr-object mixin="cube" position="0 0 0" rotation="0 45 0"></vr-object>
-      <vr-object mixin="cube" position="10 0 0" rotation="0 45 0"></vr-object>
-    </vr-scene>
+      <a-object mixin="cube" position="-10 0 0" rotation="0 45 0" material="color: yellow"></a-object>
+      <a-object mixin="cube" position="0 0 0" rotation="0 45 0"></a-object>
+      <a-object mixin="cube" position="10 0 0" rotation="0 45 0"></a-object>
+    </a-scene>
   </body>
 </html>
