--- a/examples/index.html
+++ b/examples/index.html
@@ -49,6 +49,7 @@
       <li><a href="mixin/">Mixin</a></li>
       <li><a href="opacity/">Opacity</a></li>
       <li><a href="texture/">Texture</a></li>
+      <li><a href="shadows/">Shadows</a></li>
       <li><a href="panoexplorer/">Pano Explorer</a></li>
     </ul>
   </body>
