--- a/examples/controls/index.html
+++ b/examples/controls/index.html
@@ -12,9 +12,7 @@
   <body>
     <vr-scene stats="true">
       <!-- We wrap the camera in a vr-object so we can position it without colliding with the HMD updates -->
-      <vr-object position="0 0 20">
-        <vr-object  camera="fov: 45" hmd-controls></vr-object>
-      </vr-object>
+      <vr-object position="0 0 20" camera="fov: 45" controls keyboard-input mouse-input hmd-input></vr-object>
       <vr-object position="-10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: red"></vr-object>
       <vr-object position="0 0 0" rotation="0 45 0" geometry="primitive: box" material="color: green"></vr-object>
       <vr-object class="cube" position="10 0 0" rotation="0 45 0" geometry="primitive: box" material="color: blue"></vr-object>
