--- a/examples/panoexplorer/index.html
+++ b/examples/panoexplorer/index.html
@@ -93,10 +93,10 @@
 
         });
 
-        if (scene.hasLoaded) {
+        if (holder.hasLoaded) {
           selectPano(1);
         } else {
-          scene.addEventListener('loaded', function () { selectPano (1); });
+          holder.addEventListener('loaded', function () { console.log('eventually loaded'); selectPano (1); });
         }
 
         function handleClick (evt) {
