--- a/examples/index.html
+++ b/examples/index.html
@@ -29,6 +29,7 @@
       <a-example-link href="model/">Model</a-example-link>
       <a-example-link href="opacity/">Opacity</a-example-link>
       <a-example-link href="physical/">Physically-Based Materials</a-example-link>
+      <a-example-link href="pivot/">Pivot</a-example-link>
       <a-example-link href="panoexplorer/">Pano Explorer</a-example-link>
       <a-example-link href="texture/">Texture</a-example-link>
       <a-example-link href="towers/">Towers</a-example-link>
