--- a/examples/cursor/index.html
+++ b/examples/cursor/index.html
@@ -16,16 +16,16 @@
       <a-mixin id="blue" material="color: blue"></a-mixin>
       <a-mixin id="yellow" material="color: yellow"></a-mixin>
       <a-mixin id="sphere" geometry="primitive: sphere"></a-mixin>
+      <a-mixin id="cursor" geometry="primitive: circle; radius: 0.05; segments: 64"
+                            material="color: red; shader: flat"
+                            cursor="maxDistance: 30"</a-mixin>
+      <a-mixin id="cursor-hovering" material="color: white"></a-mixin>
     </a-assets>
 
     <a-scene stats="true">
       <a-entity position="0 2.2 4">
         <a-entity camera look-controls wasd-controls>
-          <a-entity position="0 0 -5"
-                    geometry="primitive: ring; radiusOuter: 0.30;
-                              radiusInner: 0.20;"
-                    material="color: red; shader: flat"
-                    cursor="maxDistance: 30"></a-entity>
+          <a-entity mixin="cursor" position="0 0 -1"></a-entity>
         </a-entity>
       </a-entity>
 
